@@ -24,11 +24,11 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version = 2016010701;
+$plugin->version = 2016010702;
 $plugin->requires = 2012062500;
 $plugin->component = 'booktool_wordimport';
 $plugin->maturity = MATURITY_BETA;
-$plugin->release = '0.9.0 (Build: 20160107)';
+$plugin->release = '0.9.1 (Build: 20160107)';
 
 $plugin->dependencies = array(
     'booktool_importhtml'     => 2012061700,
